remove overflow: visible due to stepper buggy look

--- a/src/app/components/termin/enrollment/enrollment-create/enrollment-create.component.scss
+++ b/src/app/components/termin/enrollment/enrollment-create/enrollment-create.component.scss
@@ -6,7 +6,6 @@
 
 ::ng-deep .mat-horizontal-content-container {
   padding: 0 !important;
-  overflow: visible !important;
 }
 
 .self-enrollment {
